[gd_scene load_steps=5 format=3 uid="uid://ca3snx5xdcqkj"]

[ext_resource type="Theme" uid="uid://cs33qvqc60ek3" path="res://theme.tres" id="1_1bjx2"]
[ext_resource type="Texture2D" uid="uid://b3cybq6auc480" path="res://assets/images/icons/trash_bin.png" id="2_8bqc8"]
[ext_resource type="Script" path="res://items_workshop/item_inspector/tabs/ornaments_list_item.gd" id="2_gprva"]
[ext_resource type="Texture2D" uid="uid://c661nyutblxj1" path="res://assets/images/items/Annihilation_Barrel.png" id="3_lp8xp"]

[node name="OrnamentsListItem" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -900.0
offset_bottom = -655.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1bjx2")
theme_override_constants/separation = 5
script = ExtResource("2_gprva")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"InsetPanel"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.785398
pivot_offset = Vector2(8, 8)
color = Color(1, 0, 1, 1)

[node name="EffectOptions" type="OptionButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
selected = 0
popup/item_0/text = "Effect"
popup/item_0/id = 0

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/DeleteButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8bqc8")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Thumbnail" type="TextureRect" parent="HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_lp8xp")
expand_mode = 1
stretch_mode = 5

[node name="TexturePath" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Texture Path"
caret_blink = true
caret_blink_interval = 0.5

[connection signal="item_selected" from="HBoxContainer/EffectOptions" to="." method="_on_effect_options_item_selected"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="text_submitted" from="HBoxContainer2/TexturePath" to="." method="_on_texture_path_text_submitted"]
